--- a/style/index.css
+++ b/style/index.css
@@ -1,29 +1,31 @@
 section.top-page{
     display: flex;
-    height: 100%;
+    height: 100vh;
     width: 100%;
+    flex-wrap: wrap;
 }
 
-div.left{
+.left{
     display: flex;
-    background-image: url("/images/left-background.png");
+    /* background-color: ; */
+    background: url("../images/left-background.png") ,rgba(40, 238, 167, 0.93) ;
     width: 50%;
     height: 100%;
     align-items: flex-end;
-    justify-content: flex-start;
+    justify-content: center;
     flex-direction: column;
 }
 
-div.right{
+.right{
     display: flex;
-    background-image: url("/images/right-background.png");
+    background-image: url("../images/right-background.png");
     width: 50%;
     height: 100%;
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: center;
     flex-direction: column;
 }
-div.right p{
+.right p{
     color: white;
 }
 .get-trained{
@@ -56,4 +58,19 @@ div.right p{
 }
 .soft{
     text-transform: uppercase;
+}
+.talented-description{
+    min-height: 10ch;
+    text-align: right;
+    line-height: 1.5;
+    text-decoration: none;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+.hiring-desrciption{
+    min-height: 10ch;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    text-decoration: none;
+    line-height: 1.5;
 }
