--- a/style/index.css
+++ b/style/index.css
@@ -106,3 +106,45 @@ section.top-page{
     height:650px;
     margin:25px 25px;
 }
+.black-window p{
+    margin-left: 20x;
+}
+.window-logo{
+    width:40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.black-window p{
+    color: white;
+}
+.features img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: black;
+}
+.black-window-bar{
+    display: flex;
+    padding-left: 20px;
+    padding-top: 10px;
+}
+.features p{
+    font: 12px;
+}
+.features{
+    padding-right: 20px;
+    display: flex;
+    margin-left: auto;
+    justify-content: space-between;
+}
+.black-window-bar p{
+    padding-left: 20px;
+}
+.black-window-botton-ba{
+    display: flex;
+}
+.first-part img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
