--- a/style/index.css
+++ b/style/index.css
@@ -140,11 +140,38 @@ section.top-page{
 .black-window-bar p{
     padding-left: 20px;
 }
-.black-window-botton-ba{
+.black-window-botton-bar{
     display: flex;
 }
 .first-part img{
     width: 40px;
     height: 40px;
     border-radius: 50%;
+}
+.Milestones{
+    color: black;
+    text-align: left;
+    line-height: 1.4;
+    font: 24px "Noto Sans Mono", sans-serif;
+}
+.first-part{
+    display: flex;
+}
+.section-top{
+    display: flex;
+}
+.section3{
+    max-width: 1340px;
+    flex-direction: column;
+    padding-left: 70px;
+    padding-right: 70px;
+    display: flex;
+    padding-top: 70px;
+}
+.big-rectangle{
+    height:200px;
+    width:500px;
+}
+.rectangle{
+
 }
