--- a/style/index.css
+++ b/style/index.css
@@ -168,10 +168,46 @@ section.top-page{
     display: flex;
     padding-top: 70px;
 }
-.big-rectangle{
-    height:200px;
-    width:500px;
+.rectangles{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
-.rectangle{
-
+.big-rectangle{
+    height:410px;
+    width:550px;
+    background-color: #dcdee1;
+}
+.rectangle1{
+    height: 200px;
+    width: 240px;
+    background-color: #dcdee1;
+}
+.rectangle2{
+    height: 200px;
+    width: 240px;
+    background-color: #dcdee1;
+}
+.rectangle3{
+    height: 200px;
+    width: 240px;
+    background-color: #dcdee1;
+    padding-left: 20px;
+}
+.rectangle4{
+    height: 200px;
+    width: 240px;
+    background-color: #dcdee1;
+}
+.first-two-rectangles{
+    display: flex;
+    justify-content: space-between;
+}
+.second-two-rectangles{
+    display: flex;
+}
+.small-rectangles{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
