--- a/style/index.css
+++ b/style/index.css
@@ -174,30 +174,67 @@ section.top-page{
     justify-content: space-between;
 }
 .big-rectangle{
-    height:410px;
-    width:550px;
+    display: flex;
+    flex-direction: column;
+    height:400px;
+    width:500px;
     background-color: #dcdee1;
+    align-items: flex-start;
+    padding: 50px 70px;
+    border-radius: 15px;
+}
+.big-rectangle .list ul li {
+    text-decoration-style: none;
+}
+.percent{
+    font: 64px "Noto Sans Mono", sans-serif;
 }
 .rectangle1{
-    height: 200px;
+    display: flex;
+    flex-direction: column;
+    height: 220px;
     width: 240px;
     background-color: #dcdee1;
+    justify-content: center;
+    text-align: center;
+    padding-right: 15px;
+    border-radius: 15px;
+}
+.rectangle3 text{
+    max-width: 50px;
 }
 .rectangle2{
-    height: 200px;
+    display: flex;
+    flex-direction: column;
+    height: 220px;
     width: 240px;
     background-color: #dcdee1;
+    justify-content: center;
+    text-align: center;
+    border-radius: 15px;
 }
 .rectangle3{
-    height: 200px;
+    display: flex;
+    flex-direction: column;
+    height: 220px;
     width: 240px;
     background-color: #dcdee1;
     padding-left: 20px;
+    justify-content: center;
+    text-align: center;
+    border-radius: 15px;
 }
 .rectangle4{
-    height: 200px;
+    display: flex;
+    flex-direction: column;
+    height: 220px;
     width: 240px;
     background-color: #dcdee1;
+    justify-content: center;
+    text-align: center;
+    border-radius: 15px;
+    margin-left: 30px;
+    margin-top: 20px;
 }
 .first-two-rectangles{
     display: flex;
@@ -205,9 +242,6 @@ section.top-page{
 }
 .second-two-rectangles{
     display: flex;
-}
-.small-rectangles{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between; 
+    margin-top: 20px;  
 }
