--- a/style/index.css
+++ b/style/index.css
@@ -74,13 +74,13 @@ section.top-page{
     text-decoration: none;
     line-height: 1.5;
 }
-.Hello{
+.Hello , .testimonials{
     color: black;
     text-align: left;
     line-height: 1.4;
     font: 24px "Noto Sans Mono", sans-serif;
 }
-.top{
+.top , .section6-top{
     display: flex;
     align-items: center;
 }
@@ -316,4 +316,56 @@ section.top-page{
     width: 150px;
     border-radius: 10%;
     margin-left: 5px;
+}
+.section6{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.section6-top{
+    margin-top: 20px;
+}
+.circles{
+    padding-left:280px;
+}
+.section6-body{
+    display: flex;
+    margin-top: 20px;;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    height:500px;
+    width: 600px;
+    background-color: #363738;
+    border-radius: 25px;
+}
+.qoutes{
+    width:50px;
+    height:50px;
+    padding-bottom: 50px;
+}
+.qoute , .info{
+    color: white;
+}
+.person{
+    width: 200px;
+    height: 400px;
+    border-radius: 25px;
+    margin-right: 10px;
+}
+.section6-first-half{
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+}
+.tiny-image {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-top: 20px;
+    padding-right: 10px;
+}
+.info{
+    display: flex;
+    margin-top: 20px;
 }
