--- a/style/index.css
+++ b/style/index.css
@@ -369,3 +369,17 @@ section.top-page{
     display: flex;
     margin-top: 20px;
 }
+.small-circles{
+    display: flex;
+    margin-top: 20px;
+}
+.small-circle{
+    width: 15px;
+    height:15px;
+    border-radius: 50%;
+    background-color: rgba(34, 34, 34, .4);
+    margin-left: 10px;
+}
+.section7-body{
+    
+}
