--- a/style/index.css
+++ b/style/index.css
@@ -492,5 +492,23 @@ section.top-page{
     justify-content: space-between;
     padding-top: 30px;
     padding-left: 30px;
-    padding-right: 30px;
+    padding-right: 30px;}
+.map-rectangle{
+    border-radius: 25px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    background-color: #363738;
+    width: 300px;
+    height: 500px;
+    margin-top: 30px;
+    padding-left: 20px;
+}
+.map-rectangle-top{
+    padding-top: 20px;
+}
+.map-rectangle-feed{
+}
+.map{
+    border-radius: 25px;
 }
