--- a/style/index.css
+++ b/style/index.css
@@ -404,13 +404,6 @@ section.top-page{
     border-radius: 50%;
     margin-right:7px;
 }
-.black-circle-i{
-    height: 24px;
-    width: 24px;
-    background-color: #363738;
-    border-radius: 50%;
-    margin-right:7px;
-}
 .grey-circle{
     height: 24px;
     width: 24px;
@@ -589,4 +582,18 @@ section.top-page{
     justify-content: flex-end;
     padding-right: 15px;
     margin-top: 10px;
+}
+.black-circle{
+    height: 24px;
+    width: 24px;
+    background-color: #232323;
+    border-radius: 50%;
+    margin-right: 7px;
+}
+.section9-top{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 100px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
