--- a/style/index.css
+++ b/style/index.css
@@ -597,3 +597,24 @@ section.top-page{
     margin-left: 30px;
     margin-right: 30px;
 }
+.i-rows{
+    height: 80px;
+    width: 80px;
+}
+.images-first-row{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 100px;
+}
+.images-secod-row{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 30px;
+}
+.partners{
+    font: 50px;
+}
