--- a/style/index.css
+++ b/style/index.css
@@ -74,9 +74,11 @@ section.top-page{
     text-decoration: none;
     line-height: 1.5;
 }
+.margin{
+    padding-right: 15px;
+}
 .Hello , .testimonials{
     color: black;
-    text-align: left;
     line-height: 1.4;
     font: 24px "Noto Sans Mono", sans-serif;
 }
@@ -108,6 +110,17 @@ section.top-page{
 }
 .black-window p{
     margin-left: 20x;
+}
+.section2-1half{
+    display: flex;
+}
+.section2-top{
+    display: flex;
+    justify-content: space-between;
+}
+.greater-than{
+    font: 24px "Noto Sans Mono", sans-serif;
+    margin-top: 10px;
 }
 .window-logo{
     width:40px;
@@ -147,6 +160,14 @@ section.top-page{
     width: 40px;
     height: 40px;
     border-radius: 50%;
+}
+.section6-1half{
+    display: flex;
+    flex-direction: row;
+}
+.section3-top{
+    display: flex;
+    justify-content: space-between;
 }
 .Milestones{
     color: black;
@@ -250,13 +271,14 @@ section.top-page{
 }
 .section5-top{
     display: flex;
+    justify-content: space-between;
+    margin-left: 100px;
+    margin-right: 100px;
 }
-.Hire-talent span{
-    color: white;
+.section6-1half{
+    display: flex;
 }
-.greater span{
-    color: rgba(40, 238, 167, 0.93);
-}
+
 .section5-body span {
     color : white;
 }
@@ -320,32 +342,39 @@ section.top-page{
 .section6{
     display: flex;
     flex-direction: column;
-    align-items: center;
+}
+.section6-1half{
+    display: flex;
 }
 .section6-top{
+    display: flex;
+    justify-content: space-between;
     margin-top: 20px;
+    margin-left: 60px;
 }
-.circles{
-    padding-left:280px;
-}
+
 .section6-body{
     display: flex;
-    margin-top: 20px;;
     justify-content: center;
     align-items: center;
     margin-top: 50px;
-    height:500px;
-    width: 600px;
+    height:400px;
+    width: 1100px;
     background-color: #363738;
     border-radius: 25px;
+    margin-left: 60px;
 }
 .qoutes{
-    width:50px;
-    height:50px;
-    padding-bottom: 50px;
+    margin-left: 10px;
+    width:100px;
+    height:45px;
 }
 .qoute , .info{
     color: white;
+}
+.qoute{
+    height: auto;
+    width: 500px;
 }
 .person{
     width: 200px;
@@ -372,6 +401,7 @@ section.top-page{
 .small-circles{
     display: flex;
     margin-top: 20px;
+    margin-left: 600px;
 }
 .small-circle{
     width: 15px;
@@ -474,6 +504,7 @@ section.top-page{
 }
 .section8{
     background-color: #28eea7;
+    padding-bottom: 100px;
 
 }
 .section8-top-1half{
@@ -497,7 +528,7 @@ section.top-page{
     flex-direction: column;
     background-color: #363738;
     width: 300px;
-    height: 500px;
+    height: 550px;
     margin-top: 30px;
     padding-left: 20px;
 }
@@ -617,4 +648,76 @@ section.top-page{
 }
 .partners{
     font: 50px;
+}
+.section10{
+    background-color:#363738;
+    height: 300px;
+    width: auto;
+    align-items: center;
+}
+.section10-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-top: 130px;
+    margin-top: 15px;
+}
+.section10-1half{
+    display: flex;
+    flex-direction: column;
+}
+.section10-2half{
+    display: flex;
+}
+.subscribe{
+    background-color: black;
+}
+.section11{
+    background-color:#232323;
+    display: flex;
+    justify-content: space-between;
+}
+table , .home{
+    margin-left: 15px;
+}
+.subscribe-email{
+    height: 50px;
+    width: 150px;
+}
+.subscribe , .submit, .contact-us{
+    padding-top: 20px;
+}
+.table{
+    text-align: left;
+}
+.first-block{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 100px;
+}
+.first-block-home{
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.rights{
+    padding-top: 40px;
+}
+.sef-logo1{
+    width:40px;
+    height: 40px;
+    border-radius: 50%;
+
+}
+.social{
+    height: 25px;
+    width: 250px;
+}
+.div-second-block{
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
